--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -86,6 +86,12 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/spice/spice-dialog.controller.js"></script>
+    <script src="app/entities/spice/spice-detail.controller.js"></script>
+    <script src="app/entities/spice/spice-delete-dialog.controller.js"></script>
+    <script src="app/entities/spice/spice.state.js"></script>
+    <script src="app/entities/spice/spice.service.js"></script>
+    <script src="app/entities/spice/spice.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
