add ingredient and product entities

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -92,6 +92,18 @@
     <script src="app/entities/spice/spice.state.js"></script>
     <script src="app/entities/spice/spice.service.js"></script>
     <script src="app/entities/spice/spice.controller.js"></script>
+    <script src="app/entities/product/product-dialog.controller.js"></script>
+    <script src="app/entities/product/product-detail.controller.js"></script>
+    <script src="app/entities/product/product-delete-dialog.controller.js"></script>
+    <script src="app/entities/product/product.state.js"></script>
+    <script src="app/entities/product/product.service.js"></script>
+    <script src="app/entities/product/product.controller.js"></script>
+    <script src="app/entities/ingredient/ingredient-dialog.controller.js"></script>
+    <script src="app/entities/ingredient/ingredient-detail.controller.js"></script>
+    <script src="app/entities/ingredient/ingredient-delete-dialog.controller.js"></script>
+    <script src="app/entities/ingredient/ingredient.state.js"></script>
+    <script src="app/entities/ingredient/ingredient.service.js"></script>
+    <script src="app/entities/ingredient/ingredient.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
