--- a/src/main/webapp/app/entities/spice/spice-dialog.html
+++ b/src/main/webapp/app/entities/spice/spice-dialog.html
@@ -4,7 +4,7 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="vm.clear()">&times;</button>
-        <h4 class="modal-title" id="mySpiceLabel">Create or edit a Spice</h4>
+        <h4 class="modal-title" id="mySpiceLabel">Dodanie lub edycja przyprawy</h4>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
@@ -14,26 +14,26 @@
                     ng-model="vm.spice.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_name">Name</label>
+            <label class="control-label" for="field_name">Nazwa</label>
             <input type="text" class="form-control" name="name" id="field_name"
                     ng-model="vm.spice.name"
                     required />
             <div ng-show="editForm.name.$invalid">
                 <p class="help-block"
                     ng-show="editForm.name.$error.required">
-                    This field is required.
+                    To pole jest wymagane.
                 </p>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_producer">Producer</label>
+            <label class="control-label" for="field_producer">Producent</label>
             <input type="text" class="form-control" name="producer" id="field_producer"
                     ng-model="vm.spice.producer"
                     required />
             <div ng-show="editForm.producer.$invalid">
                 <p class="help-block"
                     ng-show="editForm.producer.$error.required">
-                    This field is required.
+                    To pole jest wymagane
                 </p>
             </div>
         </div>
@@ -41,10 +41,10 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
-            <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Cancel</span>
+            <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Anuluj</span>
         </button>
         <button type="submit" ng-disabled="editForm.$invalid || vm.isSaving" class="btn btn-primary">
-            <span class="glyphicon glyphicon-save"></span>&nbsp;<span>Save</span>
+            <span class="glyphicon glyphicon-save"></span>&nbsp;<span>Zapisz</span>
         </button>
     </div>
 </form>
