--- a/src/main/webapp/app/entities/spice/spices.html
+++ b/src/main/webapp/app/entities/spice/spices.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Spices</h2>
+    <h2>Przyprawy</h2>
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
         <div class="row">
@@ -7,7 +7,7 @@
                 <button class="btn btn-primary" ui-sref="spice.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Create new Spice
+                        Dodaj
                     </span>
                 </button>
             </div>
@@ -19,8 +19,8 @@
             <thead>
                 <tr>
                     <th><span>ID</span></th>
-                    <th><span>Name</span></th>
-                    <th><span>Producer</span></th>
+                    <th><span>Nazwa</span></th>
+                    <th><span>Producent</span></th>
                     <th></th>
                 </tr>
             </thead>
