--- a/src/main/webapp/app/account/register/register.html
+++ b/src/main/webapp/app/account/register/register.html
@@ -1,122 +1,122 @@
 <div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h1>Registration</h1>
+            <h1>Rejestracja</h1>
 
             <div class="alert alert-success" ng-show="vm.success">
-                <strong>Registration saved!</strong> Please check your email for confirmation.
+                <strong>Rejestracja przebiegła pomyślnie!</strong> Sprawdź swój e-mail w celu potwierdzenia konta.
             </div>
 
             <div class="alert alert-danger" ng-show="vm.error">
-                <strong>Registration failed!</strong> Please try again later.
+                <strong>Nie udało się zarejestrować!</strong> Spróbuj ponownie później.
             </div>
 
             <div class="alert alert-danger" ng-show="vm.errorUserExists">
-                <strong>Login name already registered!</strong> Please choose another one.
+                <strong>Podany login jest już zajęty!</strong> Podaj inny login i spóbuj ponownie.
             </div>
 
             <div class="alert alert-danger" ng-show="vm.errorEmailExists">
-                <strong>E-mail is already in use!</strong> Please choose another one.
+                <strong>Podany e-mail jest już zajęty!</strong> Podaj inny e-mail i spóbuj ponownie.
             </div>
 
             <div class="alert alert-danger" ng-show="vm.doNotMatch">
-                The password and its confirmation do not match!
+                Podane hasła nie są identyczne!
             </div>
         </div>
         <div class="col-md-8 col-md-offset-2">
             <form ng-show="!vm.success" name="form" role="form" novalidate ng-submit="vm.register()" show-validation>
 
                 <div class="form-group">
-                    <label class="control-label" for="login">Username</label>
-                    <input type="text" class="form-control" id="login" name="login" placeholder="Your username"
+                    <label class="control-label" for="login">Login</label>
+                    <input type="text" class="form-control" id="login" name="login" placeholder="Twój login"
                            ng-model="vm.registerAccount.login" ng-minlength=1 ng-maxlength=50 ng-pattern="/^[_'.@A-Za-z0-9-]*$/" required>
                     <div ng-show="form.login.$dirty && form.login.$invalid">
                         <p class="help-block"
                                ng-show="form.login.$error.required">
-                            Your username is required.
+                            Login jest wymagany.
                         </p>
                         <p class="help-block"
                                ng-show="form.login.$error.minlength">
-                            Your username is required to be at least 1 character.
+                            Login musi mieć conajmniej 1 znak.
                         </p>
                         <p class="help-block"
                                ng-show="form.login.$error.maxlength">
-                            Your username cannot be longer than 50 characters.
+                            Login musi mieć conajwyżej 50 znaków.
                         </p>
                         <p class="help-block"
                                ng-show="form.login.$error.pattern">
-                            Your username can only contain lower-case letters and digits.
+                            Login musi zawierać tylko małe litery i cyfry.
                     </p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="email">E-mail</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Your e-mail"
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Twój e-mail"
                            ng-model="vm.registerAccount.email" ng-minlength=5 ng-maxlength=100 required>
                     <div ng-show="form.email.$dirty && form.email.$invalid">
                         <p class="help-block"
                                ng-show="form.email.$error.required">
-                            Your e-mail is required.
+                            E-mail jest wymagany.
                         </p>
                         <p class="help-block"
                                ng-show="form.email.$error.email">
-                            Your e-mail is invalid.
+                            E-mail jest nieprawidłowy.
                         </p>
                         <p class="help-block"
                                ng-show="form.email.$error.minlength">
-                            Your e-mail is required to be at least 5 characters.
+                            E-mail musi mieć conajmniej 5 znaków.
                         </p>
                         <p class="help-block"
                                ng-show="form.email.$error.maxlength">
-                            Your e-mail cannot be longer than 100 characters.
+                            E-mail musi mieć conajwyżej 100 znaków.
                         </p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="password">New password</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="New password"
+                    <label class="control-label" for="password">Hasło</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Twoje hasło"
                            ng-model="vm.registerAccount.password" ng-minlength=4 ng-maxlength=50 required>
                     <div ng-show="form.password.$dirty && form.password.$invalid">
                         <p class="help-block"
                                ng-show="form.password.$error.required">
-                            Your password is required.
+                            Hasło jest wymagane.
                         </p>
                         <p class="help-block"
                                ng-show="form.password.$error.minlength">
-                            Your password is required to be at least 4 characters.
+                            Hasło musi mieć conajmniej 4 znaki.
                         </p>
                         <p class="help-block"
                                ng-show="form.password.$error.maxlength">
-                            Your password cannot be longer than 50 characters.
+                            Hasło musi mieć conajwyżej 50 znaków.
                         </p>
                     </div>
                     <password-strength-bar password-to-check="vm.registerAccount.password"></password-strength-bar>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="confirmPassword">New password confirmation</label>
-                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm the new password"
+                    <label class="control-label" for="confirmPassword">Powtórz hasło</label>
+                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Twoje hasło"
                            ng-model="vm.confirmPassword" ng-minlength=4 ng-maxlength=50 required>
                     <div ng-show="form.confirmPassword.$dirty && form.confirmPassword.$invalid">
                         <p class="help-block"
                                ng-show="form.confirmPassword.$error.required">
-                            Your confirmation password is required.
+                            Hasło jest wymagane.
                         </p>
                         <p class="help-block"
                                ng-show="form.confirmPassword.$error.minlength">
-                            Your confirmation password is required to be at least 4 characters.
+                            Hasło musi mieć conajmniej 4 znaki.
                         </p>
                         <p class="help-block"
                                ng-show="form.confirmPassword.$error.maxlength">
-                            Your confirmation password cannot be longer than 50 characters.
+                            Hasło musi mieć conajwyżej 50 znaków.
                         </p>
                     </div>
                 </div>
 
-                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Register</button>
+                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Zarejestruj się</button>
             </form>
             <p></p>
             <div class="alert alert-warning">
-                If you want to <a class="alert-link" href="" ng-click="vm.login()">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
+                Jeśli chcesz się zalogować kliknij <a class="alert-link" href="" ng-click="vm.login()">tutaj</a>.
             </div>
         </div>
     </div>
