--- a/src/main/webapp/app/entities/product/product-dialog.html
+++ b/src/main/webapp/app/entities/product/product-dialog.html
@@ -4,7 +4,7 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="vm.clear()">&times;</button>
-        <h4 class="modal-title" id="myProductLabel">Create or edit a Product</h4>
+        <h4 class="modal-title" id="myProductLabel">Dodanie lub edycja produktu</h4>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
@@ -13,28 +13,71 @@
             <input type="text" class="form-control" id="id" name="id"
                     ng-model="vm.product.id" readonly />
         </div>
+
         <div class="form-group">
-            <label class="control-label" for="field_name">Name</label>
+            <label class="control-label" for="field_name">Nazwa</label>
             <input type="text" class="form-control" name="name" id="field_name"
                     ng-model="vm.product.name"
                     required />
             <div ng-show="editForm.name.$invalid">
                 <p class="help-block"
                     ng-show="editForm.name.$error.required">
-                    This field is required.
+                    To pole jest wymagane.
                 </p>
             </div>
         </div>
 
-        <div class="form-group">
-            <label for="field_ingredient">Ingredient</label>
-            <select class="form-control" id="field_ingredient" multiple name="ingredient" ng-model="vm.product.ingredients" ng-options="ingredient as ingredient.id for ingredient in vm.ingredients track by ingredient.id" required></select>
-        </div>
-        <div ng-show="editForm.ingredient.$invalid">
-            <p class="help-block"
-                ng-show="editForm.ingredient.$error.required">
-                This field is required.
-            </p>
+        <div ng-repeat="ingredient in vm.product.ingredients">
+            <div class="row">
+                <div class="col-xs-3">
+                    <div class="form-group">
+                        <label class="control-label" for="field_amount">Ilość</label>
+                        <input type="number" class="form-control" name="amount_{{$index}}" id="field_amount"
+                               ng-model="ingredient.amount" required />
+                        <div ng-show="editForm['amount_' + $index].$invalid">
+                            <p class="help-block"
+                               ng-show="editForm['amount_' + $index].$error.required">
+                                To pole jest wymagane
+                            </p>
+                            <p class="help-block"
+                               ng-show="editForm['amount_' + $index].$error.number">
+                                To pole powinno być liczbą.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-7">
+                    <div class="form-group">
+                        <label for="field_spice">Przyprawa</label>
+                        <select class="form-control" id="field_spice" name="spice_{{$index}}" ng-model="ingredient.spiceId"
+                                ng-options="spice.id as spice.name for spice in vm.spices | orderBy:'id'" required>
+                            <option value=""></option>
+                        </select>
+                        <div ng-show="editForm['spice_' + $index].$invalid">
+                            <p class="help-block"
+                               ng-show="editForm['spice_' + $index].$error.required">
+                                To pole jest wymagane.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-2">
+                    <div class="form-group">
+                        <label>Akcje</label>
+                        <div class="btn-group" role="group">
+                            <button type="button" class="btn btn-danger" ng-click="vm.removeIngredient($index)"
+                                    ng-disabled="vm.product.ingredients.length <= 1">
+                                <span class="glyphicon glyphicon-remove-circle"></span>
+                            </button>
+                            <button type="button" class="btn btn-primary" ng-click="vm.addIngredient($index)">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="modal-footer">
