--- a/src/main/webapp/app/entities/product/product-dialog.html
+++ b/src/main/webapp/app/entities/product/product-dialog.html
@@ -50,7 +50,7 @@
                 <div class="col-xs-7">
                     <div class="form-group">
                         <label for="field_spice">Przyprawa</label>
-                        <select class="form-control" id="field_spice" name="spice_{{$index}}" ng-model="ingredient.spiceId"
+                        <select class="form-control" id="field_spice" name="spice_{{$index}}" ng-model="ingredient.spice.id"
                                 ng-options="spice.id as spice.name for spice in vm.spices | orderBy:'id'" required>
                             <option value=""></option>
                         </select>
