--- a/src/main/webapp/app/entities/product/product-detail.html
+++ b/src/main/webapp/app/entities/product/product-detail.html
@@ -1,29 +1,30 @@
 
 <div>
-    <h2><span>Product</span> {{vm.product.id}}</h2>
+    <h2><span>Produkt</span> {{vm.product.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="dl-horizontal jh-entity-details">
-        <dt><span>Name</span></dt>
+        <dt><span>Nazwa</span></dt>
         <dd>
             <span>{{vm.product.name}}</span>
         </dd>
-        <dt><span>Ingredient</span></dt>
+        <dt><span>Składniki</span></dt>
         <dd>
-            <span ng-repeat="ingredient in vm.product.ingredients">
-                <a ui-sref="ingredient-detail({id: ingredient.id})">{{ingredient.id}}</a>{{$last ? '' : ', '}}
-            </span>
+            <div style="display: table-row" ng-repeat="ingredient in vm.product.ingredients">
+                <div style="display: table-cell; padding-right: 20px">{{ingredient.amount}} kg</div>
+                <div style="display: table-cell">{{ingredient.spice.name}}</div>
+            </div>
         </dd>
     </dl>
 
     <button type="submit"
             ui-sref="{{ vm.previousState }}"
             class="btn btn-info">
-        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
+        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Wstecz</span>
     </button>
 
     <button type="button" ui-sref="product-detail.edit({id:vm.product.id})" class="btn btn-primary">
         <span class="glyphicon glyphicon-pencil"></span>
-        <span class="hidden-xs hidden-sm"> Edit</span>
+        <span class="hidden-xs hidden-sm"> Edytuj</span>
     </button>
 </div>
