--- a/src/main/webapp/app/entities/spice/spice-delete-dialog.html
+++ b/src/main/webapp/app/entities/spice/spice-delete-dialog.html
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p>Czy jesteś pewien, że chcesz usunąć tą przyprawę?</p>
+        <p>Czy na pewno chcesz usunąć tą przyprawę?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
