--- a/src/main/webapp/app/entities/spice/spices.html
+++ b/src/main/webapp/app/entities/spice/spices.html
@@ -7,7 +7,7 @@
                 <button class="btn btn-primary" ui-sref="spice.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Dodaj
+                        Nowa przyprawa
                     </span>
                 </button>
             </div>
