--- a/src/main/webapp/app/entities/production/production-dialog.html
+++ b/src/main/webapp/app/entities/production/production-dialog.html
@@ -60,7 +60,7 @@
                 <div class="col-xs-7">
                     <div class="form-group">
                         <label for="field_product">Produkt</label>
-                        <select class="form-control" id="field_product" name="product_{{$index}}" ng-model="productionItem.productId"
+                        <select class="form-control" id="field_product" name="product_{{$index}}" ng-model="productionItem.product.id"
                                 ng-options="product.id as product.name for product in vm.products | orderBy:'id'" required>
                             <option value=""></option>
                         </select>
