--- a/src/main/webapp/app/entities/production/productions.html
+++ b/src/main/webapp/app/entities/production/productions.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Productions</h2>
+    <h2>Produkcje</h2>
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
         <div class="row">
@@ -7,7 +7,7 @@
                 <button class="btn btn-primary" ui-sref="production.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Create new Production
+                        Nowa produkcja
                     </span>
                 </button>
             </div>
@@ -19,14 +19,23 @@
             <thead>
                 <tr>
                     <th><span>ID</span></th>
-                    <th><span>Datetime</span></th>
+                    <th><span>Data</span></th>
+                    <th><span>Produkty</span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="production in vm.productions track by production.id">
                     <td><a ui-sref="production-detail({id:production.id})">{{production.id}}</a></td>
-                    <td>{{production.datetime | date:'medium'}}</td>
+                    <td>{{production.datetime | date:'shortDate'}}</td>
+                    <td>
+                        <div class="container-fluid">
+                            <div class="row" ng-repeat="productionItem in production.productionItems">
+                                <div class="col-xs-3 no-padding">{{productionItem.amount}} kg</div>
+                                <div class="col-xs-9 no-padding">{{productionItem.product.name}}</div>
+                            </div>
+                        </div>
+                    </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
