add supply entity

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -86,6 +86,12 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/supply/supply-dialog.controller.js"></script>
+    <script src="app/entities/supply/supply-detail.controller.js"></script>
+    <script src="app/entities/supply/supply-delete-dialog.controller.js"></script>
+    <script src="app/entities/supply/supply.state.js"></script>
+    <script src="app/entities/supply/supply.service.js"></script>
+    <script src="app/entities/supply/supply.controller.js"></script>
     <script src="app/entities/spice/spice-dialog.controller.js"></script>
     <script src="app/entities/spice/spice-detail.controller.js"></script>
     <script src="app/entities/spice/spice-delete-dialog.controller.js"></script>
