--- a/src/main/webapp/app/entities/supply/supply-detail.html
+++ b/src/main/webapp/app/entities/supply/supply-detail.html
@@ -1,22 +1,22 @@
 
 <div>
-    <h2><span>Supply</span> {{vm.supply.id}}</h2>
+    <h2><span>Zasób</span> {{vm.supply.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="dl-horizontal jh-entity-details">
-        <dt><span>Serial Number</span></dt>
+        <dt><span>Numer partii</span></dt>
         <dd>
             <span>{{vm.supply.serialNumber}}</span>
         </dd>
-        <dt><span>Expiration Date</span></dt>
+        <dt><span>Data ważności</span></dt>
         <dd>
             <span>{{vm.supply.expirationDate | date:'mediumDate'}}</span>
         </dd>
-        <dt><span>Amount</span></dt>
+        <dt><span>Ilość</span></dt>
         <dd>
             <span>{{vm.supply.amount}}</span>
         </dd>
-        <dt><span>Spice</span></dt>
+        <dt><span>Przyprawa</span></dt>
         <dd>
             <a ui-sref="spice-detail({id:vm.supply.spiceId})">{{vm.supply.spiceId}}</a>
         </dd>
@@ -25,11 +25,11 @@
     <button type="submit"
             ui-sref="{{ vm.previousState }}"
             class="btn btn-info">
-        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
+        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Wstecz</span>
     </button>
 
     <button type="button" ui-sref="supply-detail.edit({id:vm.supply.id})" class="btn btn-primary">
         <span class="glyphicon glyphicon-pencil"></span>
-        <span class="hidden-xs hidden-sm"> Edit</span>
+        <span class="hidden-xs hidden-sm"> Edytuj</span>
     </button>
 </div>
