--- a/src/main/webapp/app/entities/supply/supply-dialog.html
+++ b/src/main/webapp/app/entities/supply/supply-dialog.html
@@ -4,7 +4,7 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="vm.clear()">&times;</button>
-        <h4 class="modal-title" id="mySupplyLabel">Create or edit a Supply</h4>
+        <h4 class="modal-title" id="mySupplyLabel">Dodanie lub edycja zasobu</h4>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
@@ -14,19 +14,19 @@
                     ng-model="vm.supply.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_serialNumber">Serial Number</label>
+            <label class="control-label" for="field_serialNumber">Numer partii</label>
             <input type="text" class="form-control" name="serialNumber" id="field_serialNumber"
                     ng-model="vm.supply.serialNumber"
                     required />
             <div ng-show="editForm.serialNumber.$invalid">
                 <p class="help-block"
                     ng-show="editForm.serialNumber.$error.required">
-                    This field is required.
+                    To pole jest wymagane.
                 </p>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_expirationDate">Expiration Date</label>
+            <label class="control-label" for="field_expirationDate">Data ważności</label>
                 <div class="input-group">
                     <input id="field_expirationDate" type="text" class="form-control" name="expirationDate" uib-datepicker-popup="{{dateformat}}" ng-model="vm.supply.expirationDate" is-open="vm.datePickerOpenStatus.expirationDate"
                     required/>
@@ -37,29 +37,29 @@
             <div ng-show="editForm.expirationDate.$invalid">
                 <p class="help-block"
                     ng-show="editForm.expirationDate.$error.required">
-                    This field is required.
+                    To pole jest wymagane.
                 </p>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_amount">Amount</label>
+            <label class="control-label" for="field_amount">Ilość</label>
             <input type="number" class="form-control" name="amount" id="field_amount"
                     ng-model="vm.supply.amount"
                     required />
             <div ng-show="editForm.amount.$invalid">
                 <p class="help-block"
                     ng-show="editForm.amount.$error.required">
-                    This field is required.
+                    To pole jest wymagane.
                 </p>
                 <p class="help-block"
                     ng-show="editForm.amount.$error.number">
-                    This field should be a number.
+                    To pole powinno być liczbą.
                 </p>
             </div>
         </div>
 
         <div class="form-group">
-            <label for="field_spice">Spice</label>
+            <label for="field_spice">Przyprawa</label>
             <select class="form-control" id="field_spice" name="spice" ng-model="vm.supply.spiceId" ng-options="spice.id as spice.id for spice in vm.spices"             required>
                 <option value=""></option>
             </select>
@@ -67,16 +67,16 @@
         <div ng-show="editForm.spice.$invalid">
             <p class="help-block"
                 ng-show="editForm.spice.$error.required">
-                This field is required.
+                To pole jest wymagane.
             </p>
         </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
-            <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Cancel</span>
+            <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Anuluj</span>
         </button>
         <button type="submit" ng-disabled="editForm.$invalid || vm.isSaving" class="btn btn-primary">
-            <span class="glyphicon glyphicon-save"></span>&nbsp;<span>Save</span>
+            <span class="glyphicon glyphicon-save"></span>&nbsp;<span>Zapisz</span>
         </button>
     </div>
 </form>
