--- a/src/main/webapp/app/entities/supply/supply-detail.html
+++ b/src/main/webapp/app/entities/supply/supply-detail.html
@@ -18,7 +18,7 @@
         </dd>
         <dt><span>Przyprawa</span></dt>
         <dd>
-            <a ui-sref="spice-detail({id:vm.supply.spiceId})">{{vm.supply.spiceId}}</a>
+            <span>{{vm.supply.spice.name}}</span>
         </dd>
     </dl>
 
