change date time to date in production

--- a/src/main/webapp/app/entities/production/production-detail.html
+++ b/src/main/webapp/app/entities/production/production-detail.html
@@ -6,7 +6,7 @@
     <dl class="dl-horizontal jh-entity-details">
         <dt><span>Data</span></dt>
         <dd>
-            <span>{{vm.production.datetime | date:'shortDate'}}</span>
+            <span>{{vm.production.date | date:'shortDate'}}</span>
         </dd>
         <dt><span>Produkty</span></dt>
         <dd>
