--- a/src/main/webapp/app/entities/supply/supplies.html
+++ b/src/main/webapp/app/entities/supply/supplies.html
@@ -30,7 +30,7 @@
                 <tr ng-repeat="supply in vm.supplies track by supply.id">
                     <td><a ui-sref="supply-detail({id:supply.id})">{{supply.id}}</a></td>
                     <td>{{supply.serialNumber}}</td>
-                    <td>{{supply.expirationDate | date:'mediumDate'}}</td>
+                    <td>{{supply.expirationDate | date:'shortDate'}}</td>
                     <td>{{supply.amount}}</td>
                     <td>{{supply.spice.name}}</td>
                     <td class="text-right">
