--- a/src/main/webapp/app/entities/supply/supply-detail.html
+++ b/src/main/webapp/app/entities/supply/supply-detail.html
@@ -10,7 +10,7 @@
         </dd>
         <dt><span>Data ważności</span></dt>
         <dd>
-            <span>{{vm.supply.expirationDate | date:'mediumDate'}}</span>
+            <span>{{vm.supply.expirationDate | date:'shortDate'}}</span>
         </dd>
         <dt><span>Ilość</span></dt>
         <dd>
