add padding to entity details description

--- a/src/main/webapp/app/entities/product/product-dialog.html
+++ b/src/main/webapp/app/entities/product/product-dialog.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-xs-3">
                     <div class="form-group">
-                        <label class="control-label" for="field_amount">Ilość</label>
+                        <label class="control-label" for="field_amount">Ilość / 100 kg</label>
                         <input type="number" class="form-control" name="amount_{{$index}}" id="field_amount"
                                ng-model="ingredient.amount" required />
                         <div ng-show="editForm['amount_' + $index].$invalid">
