--- a/src/main/resources/mails/passwordResetEmail.html
+++ b/src/main/resources/mails/passwordResetEmail.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title th:text="#{email.reset.title}">JHipster password reset</title>
+        <title>[ZPM Kopacz] Resetowanie hasła</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
-        <p th:text="#{email.reset.greeting(${user.login})}">
-            Dear
-        </p>
-        <p th:text="#{email.reset.text1}">
-            For your JHipster account a password reset was requested, please click on the URL below to reset it:
+        <p>
+            Witaj <span th:text="${user.login}">użytkownik</span>!
         </p>
         <p>
-            <a th:href="@{|${baseUrl}/#/reset/finish?key=${user.resetKey}|}"
-               th:text="|${user.login}|">Reset Link</a>
+            Dla Twojego konta został rozpoczęty proces resetowania hasła. Aby zresetować hasło kliknij w poniższy link:<br/>
+            <a th:href="@{|${baseUrl}/#/reset/finish?key=${user.resetKey}|}">link do resetu</a>
         </p>
         <p>
-            <span th:text="#{email.reset.text2}">Regards, </span>
-            <br/>
-            <em th:text="#{email.signature}">JHipster.</em>
+            Pozdrawiam,<br/>
+            <em>CompanyApp</em>
         </p>
     </body>
 </html>
