--- a/src/main/webapp/app/account/reset/request/reset.request.html
+++ b/src/main/webapp/app/account/reset/request/reset.request.html
@@ -1,45 +1,47 @@
 <div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h1>Reset your password</h1>
+            <h1>Zresetuj swoje hasło</h1>
+
+            <div class="alert alert-danger" ng-show="vm.error">
+                <strong>Nie udało się zresetować hasła!</strong></br>
+                Spróbuj ponownie później.
+            </div>
 
             <div class="alert alert-danger" ng-show="vm.errorEmailNotExists">
-                <strong>E-Mail address isn't registered!</strong> Please check and try again.
+                <strong>Podany adres e-mail nie jest zarejestrowany!</strong><br/>
+                Sprawdź adres e-mail i spróbuj ponownie.
             </div>
 
             <div class="alert alert-warning" ng-hide="vm.success">
-                <p>Enter the e-mail address you used to register.</p>
+                <p>Podaj adres e-mail, na który zostało zarejestrowane konto.</p>
             </div>
 
-            <div class="alert alert-success" ng-show="vm.success == 'OK'">
-                <p>Check your e-mails for details on how to reset your password.</p>
+            <div class="alert alert-success" ng-show="vm.success">
+                <p>Sprawdź swój e-mail w celu dokończenia procesu resetu hasła.</p>
             </div>
 
             <form ng-show="!vm.success" name="form" role="form" novalidate ng-submit="vm.requestReset()" show-validation>
                 <div class="form-group">
                     <label class="control-label" for="email">E-mail</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Your e-mail"
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Twój e-mail"
                            ng-model="vm.resetAccount.email" ng-minlength=5 ng-maxlength=100 required>
                     <div ng-show="form.email.$dirty && form.email.$invalid">
-                        <p class="help-block"
-                           ng-show="form.email.$error.required">
-                            Your e-mail is required.
+                        <p class="help-block" ng-show="form.email.$error.required">
+                            Adres e-mail jest wymagany.
                         </p>
-                        <p class="help-block"
-                           ng-show="form.email.$error.email">
-                            Your e-mail is invalid.
+                        <p class="help-block" ng-show="form.email.$error.email">
+                            Adres e-mail jest nieprawidłowy.
                         </p>
-                        <p class="help-block"
-                           ng-show="form.email.$error.minlength">
-                            Your e-mail is required to be at least 5 characters.
+                        <p class="help-block" ng-show="form.email.$error.minlength">
+                            Adres e-mail musi mieć co najmniej 5 znaków.
                         </p>
-                        <p class="help-block"
-                           ng-show="form.email.$error.maxlength">
-                            Your e-mail cannot be longer than 100 characters.
+                        <p class="help-block" ng-show="form.email.$error.maxlength">
+                            Adres e-mail musi mieć co najwyżej 100 znaków.
                         </p>
                     </div>
                 </div>
-                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Reset</button>
+                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Resetuj hasło</button>
             </form>
 
         </div>
