refactor of activation process

--- a/src/main/webapp/app/account/activate/activate.html
+++ b/src/main/webapp/app/account/activate/activate.html
@@ -1,14 +1,14 @@
 <div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h1>Activation</h1>
+            <h1>Aktywacja konta</h1>
 
             <div class="alert alert-success" ng-show="vm.success">
-                <strong>Your user has been activated.</strong> Please <a class="alert-link" href="" ng-click="vm.login()">sign in</a>.
+                <strong>Konto zostało aktywowane!</strong>
             </div>
 
             <div class="alert alert-danger" ng-show="vm.error">
-                <strong>Your user could not be activated.</strong> Please use the registration form to sign up.
+                <strong>Nie udało się aktywować konta!</strong>
             </div>
 
         </div>
