--- a/src/main/webapp/app/account/reset/finish/reset.finish.html
+++ b/src/main/webapp/app/account/reset/finish/reset.finish.html
@@ -23,7 +23,7 @@
 
             <div class="alert alert-success" ng-show="vm.success">
                 <strong>Twoje hasło zostało zresetowane!</strong><br/>
-                Kliknij <a class="alert-link" href="" ng-click="vm.login()">tutaj</a>, aby się zalogować.</p>
+                Kliknij <a class="alert-link" href="" ng-click="vm.login()">tutaj</a>, aby się zalogować.
             </div>
 
             <div ng-hide="vm.keyMissing">
